# or1k-spartan6-freqMeter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  programm_flash.cmd.in
application/: CMakeLists.txt  link.app.ld.in  main.c
application/freertos/: CMakeLists.txt
application/freertos/include/: CMakeLists.txt  portable.h
application/freertos/port/: CMakeLists.txt  FreeRTOSConfig.h.in  port.c  portmacro.h
application/hw/: CMakeLists.txt  GPIO.h  ethcomm.c  ethernet_phy.c  ethernet_phy.h  freqmeters.c  freqmeters.h  irq.c  irq.h  mdio.c  mdio.h  mem_map.h  minmac.c  minmac.h  seg7_display.c  seg7_display.h  serial1.c  syscall.h
application/ibexukIP/: CMakeLists.txt  eth-arp.c  eth-dhcp.c  eth-http.c  eth-http.h  eth-ip.c  eth-ip.h  eth-main.c  eth-main.h  eth-nic.c  eth-nic.h  eth-tcp.c  eth-tcp.h  eth-udp.c  eth-udp.h  main.h.in  timers.c
application/lib/: CMakeLists.txt
application/libbase/: CMakeLists.txt  assert_trap.c  crc32.c  crc32.h  graycode.c  heap.c  heap.h  heap_4.c  mem_managment.c  mem_managment.h  printf-warper.c  startup.c
application/libfnetstack/: CMakeLists.txt  fnet.h  fnet_arp.c  fnet_arp_prv.h  fnet_checksum.c  fnet_config.h  fnet_error.c  fnet_eth.c  fnet_eth_prv.h  fnet_icmp.c  fnet_icmp6.c  fnet_igmp.c  fnet_inet.c  fnet_ip.c  fnet_ip6.c  fnet_ip6_prv.h  fnet_ip_prv.h  fnet_isr.c  fnet_loop.c  fnet_mempool.c  fnet_mld.c  fnet_nd6.c  fnet_netbuf.c  fnet_netif.c  fnet_netif_prv.h  fnet_raw.c  fnet_socket.c  fnet_socket_prv.h  fnet_stack.c  fnet_stack_prv.h  fnet_stdlib.c  fnet_tcp.c  fnet_timer.c  fnet_udp.c  fnet_user_config.h
application/libfnetstack/port/: fnet_prot.h
application/libfnetstack/port/compiler/: fnet_comp.h  fnet_comp_asm.h  fnet_comp_config.h
application/libfnetstack/port/cpu/: fnet_cpu.c  fnet_cpu_config.h
application/libfnetstack/port/cpu/common/: fnet_fec.c  fnet_fec.h
application/libfnetstack/port/cpu/mcf/: fnet_mcf.c  fnet_mcf.h  fnet_mcf51cn128_config.h  fnet_mcf52235_config.h  fnet_mcf52259_config.h  fnet_mcf5235_config.h  fnet_mcf5282_config.h  fnet_mcf54418_config.h  fnet_mcf_cache.c  fnet_mcf_checksum.s  fnet_mcf_config.h  fnet_mcf_eth.c  fnet_mcf_flash.c  fnet_mcf_isr.s  fnet_mcf_isr_inst.c  fnet_mcf_low.s  fnet_mcf_serial.c  fnet_mcf_timer.c
application/libfnetstack/port/cpu/mk/: fnet_mk.c  fnet_mk.h  fnet_mk60dn512_config.h  fnet_mk60fn1_config.h  fnet_mk60n512_config.h  fnet_mk64fn1_config.h  fnet_mk66fn2_config.h  fnet_mk70fn1_config.h  (+9 more)
application/libfnetstack/services/: fnet_services.h  fnet_services_config.h
application/libfnetstack/services/autoip/: fnet_autoip.c  fnet_autoip.h  fnet_autoip_config.h
application/libfnetstack/services/dhcp/: fnet_dhcp.c  fnet_dhcp.h  fnet_dhcp_config.h
application/libfnetstack/services/dns/: fnet_dns.c  fnet_dns_prv.h
application/libfnetstack/services/flash/: fnet_flash.c  fnet_flash.h  fnet_flash_config.h
application/libfnetstack/services/fs/: fnet_fs.c  fnet_fs.h  fnet_fs_config.h  fnet_fs_prv.h  fnet_fs_rom.c  fnet_fs_rom.h  fnet_fs_root.c  fnet_fs_root.h
application/libfnetstack/services/http/: fnet_http.c  fnet_http.h  fnet_http_auth.c  fnet_http_auth.h  fnet_http_auth_prv.h  fnet_http_cgi.c  fnet_http_cgi.h  fnet_http_config.h  fnet_http_get.c  fnet_http_post.c  fnet_http_post.h  fnet_http_prv.h  fnet_http_ssi.c  fnet_http_ssi.h  fnet_http_ssi_prv.h
application/libfnetstack/services/link/: fnet_link.c  fnet_link.h  fnet_link_config.h
application/libfnetstack/services/llmnr/: fnet_llmnr.c  fnet_llmnr.h  fnet_llmnr_config.h
application/libfnetstack/services/ping/: fnet_ping.c  fnet_ping.h  fnet_ping_config.h
application/libfnetstack/services/poll/: fnet_poll.c
application/libfnetstack/services/serial/: fnet_serial.c  fnet_serial.h
application/libfnetstack/services/shell/: fnet_shell.c  fnet_shell.h  fnet_shell_config.h
application/libfnetstack/services/ssl/: fnet_ssl.c  fnet_ssl.h  fnet_ssl_config.h
application/libfnetstack/services/telnet/: fnet_telnet.c  fnet_telnet.h  fnet_telnet_config.h
application/libfnetstack/services/tftp/: fnet_tftp.h  fnet_tftp_cln.c  fnet_tftp_cln.h  fnet_tftp_config.h  fnet_tftp_srv.c  fnet_tftp_srv.h
application/libfnetstack/stack/: fnet_checksum.h  fnet_debug.h  fnet_icmp.h  fnet_igmp.h  fnet_inet.h  fnet_isr.h  fnet_loop.h  fnet_mld.h  fnet_netif.h  fnet_prot.c  fnet_raw.h  fnet_socket.h  fnet_stack.h  fnet_stack_config.h  fnet_tcp.h  fnet_timer.h  fnet_udp.h
application/libhw/: CMakeLists.txt  GPIO.c  bb_i2c.c  bb_i2c.h  crc32.c  ds1338z.c  ds1338z.h  freqmeters.c  freqmeters.h  i2c.h  irq.c  irq.h  mdio.c  mdio.h  minimac.c  minimac.h  minimac2.c  minimac2.h  minmac.c  prog_timer.c  prog_timer.h  rodata.c  rodata.h  rtc.c  rtc.h  serial.h  settings.c  settings.h  syscall.c  syscall.h
application/libnet/: CMakeLists.txt  arp.c  arp.h  cksum.c  cksum.h  icmp.c  icmp.h  microip.c  microip.h  microudp.c  microudp.h  udp.c  udp.h
application/lwip/: CMakeLists.txt  makehalper.mk
application/lwip/port/: CMakeLists.txt  lwipopts.h.in
application/lwip/port/arch/: cc.h
application/nanopb/: CMakeLists.txt  protobuf-protocol.c  protobuf-protocol.h  protocol.options  protocol.proto
application/picotcp/: 0001-or1k-platform.patch  0001-or1k-system-definitions.patch  CMakeLists.txt  eth_driver.c  port.c
application/scripts/: CMakeLists.txt  elf_get_section_info.sh  gen_eth_config.sh  gen_random_mac.sh  mkldscript.sh  mksummary.sh
application/servers/: CMakeLists.txt  http_server.c  tcp_server.c  tcp_server.h  udp-protobuf_server.c  udp-protobuf_server.h  udp_server.c  udp_server.h  websoc_server.c  websoc_server.h
tests/: CMakeLists.txt  decodeChanels.py  libr4_24_2.py  netmask_test.py  pb_clocktest.py  pb_plotter.py  pb_reader.py  pb_tester.py  py_endis_ch.py  pytest_libr4_24_2.py  pytest_libr4_24_2.py.in  test_data_querryer.py  test_libr4_24_2.py  ws_tester.html
www/: CMakeLists.txt
www/scripts/: CMakeLists.txt  blob_gen.py
www/siteroot/: CMakeLists.txt  index.htm  style.css  test.htm
www/siteroot/api/: m.txt
www/siteroot/css/: font-aw.css
www/siteroot/pages/: index.htm
(+143 files in other folders)
